# triple_contact_planner_ex

./: CMakeLists.txt  README.md  bottom.yaml  bottom_backup.yaml  filter_start_static_eq_grp.yaml  package.xml  start_static_eq_grp.yaml  top.yaml  top_backup.yaml
include/triple_contact_planner/: cont_reader.h  permutation.h
include/triple_contact_planner/contact/: contact.h
include/triple_contact_planner/contact_model/: contact_model.h  stefan_model.h
include/triple_contact_planner/robot_dynamics/: dexterous_robot_model.h
include/triple_contact_planner/solver/: contact_optimization.h  contact_optimization_solver.h
include/triple_contact_planner/solver/constraint/: constraint_equality.h  constraint_inequality.h
include/triple_contact_planner_ex/: cont_reader copy 2.h  cont_reader copy.h  cont_reader.h  permutation.h
include/triple_contact_planner_ex/contact_model/: contact_model.h  stefan_model.h
include/triple_contact_planner_ex/robot_dynamics/: dexterous_robot_model.h  robot_dynamics_model.h
include/triple_contact_planner_ex/solver/: contact_optimization.h  contact_optimization_solver.h
include/triple_contact_planner_ex/solver/constraint/: constraint_equality.h  constraint_inequality.h
launch/: demo.launch
src/: example.cpp  filter_by_distance.cpp  generate_start_goal.cpp  main.cpp
src/contact/: contact.cpp
src/contact_model/: contact_model.cpp
src/solver/: contact_optimization.cpp  contact_optimization_solver.cpp
src/solver/constraint/: constraint_base.cpp  constraint_equality.cpp  constraint_inequality.cpp
yaml/bottom/: link7.yaml
yaml/top/: link10.yaml
